Добавлено получение зала по id
